# TrainR

./: ._target  .gitignore  CROSS_COMPILE.md  Cargo.toml  FFI_NOTES.md  LICENSE  README.md  build-pi.sh  deploy.sh  setup-cross-compile.sh  train-control.service
.cargo/: config.toml
src/: ._server.rs  error.rs  leds.rs  lib.rs  main.rs  server.rs
